continuar por job test-execution

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,6 +7,7 @@ jobs:
  linter-execution:
   name: linter-execution
   runs-on: ubuntu-latest
+  needs: test-execution
   steps:
    - name: Checkout code
      uses: actions/checkout@v2
@@ -18,3 +19,12 @@ jobs:
       LINTER_RULES_PATH: /
       JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
       VALIDATE_JAVASCRIPT_ES: true
+ test-execution:
+  name: test-execution
+  runs-on: ubuntu-latest
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Run jest tests
+      uses:
+
