--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -26,5 +26,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Run jest tests
-      uses:
+      run: |
+       npm install jest
+       npm test
 
