--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,19 +2,26 @@ name: main_workflow
 on:
  push:
   branches:
-  - nodejs_jest_job
+  - nodejs_nodeversions_job
 jobs:
  linter-execution:
   name: linter-execution
   runs-on: ubuntu-latest
+  strategy:
+   matrix:
+     node: [ '10', '12' ]
   needs: test-execution
   steps:
    - name: Checkout code
      uses: actions/checkout@v2
+   - name: Setting node version
+     uses: actions/setup-node@v2
+     with:
+      node-version: ${{ matrix.node }}
    - name: Linter execution
      uses: github/super-linter@v3
      env:
-      DEFAULT_BRANCH: nodejs_jest_job
+      DEFAULT_BRANCH: nodejs_nodeversions_job
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       LINTER_RULES_PATH: /
       JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
