--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,6 @@ jobs:
  linter-execution:
   name: linter-execution
   runs-on: ubuntu-latest
-  needs: test-execution
   steps:
    - name: Checkout code
      uses: actions/checkout@v2
@@ -22,6 +21,7 @@ jobs:
  test-execution:
   name: test-execution
   runs-on: ubuntu-latest
+  needs: linter-execution
   steps:
     - name: Checkout code
       uses: actions/checkout@v2
