--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,4 +27,15 @@ jobs:
       uses: actions/checkout@v2
     - name: Run jest tests
       uses:
+  environment_test_execution:
+   name: environment_test_execution
+   runs-on: ubuntu-latest
+   needs: [linter-execution, test-execution]
+   env: 
+    DESTINATION_PERSON: "2DAW"
+   steps:
+    - name: hello
+      uses: adeloyedeji/github-actions-hello@v1.0
+      with: 
+        who-to-greet: "${{Env.DESTINATION_PERSON}}"
 
