--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,44 +1,39 @@
-name: main_workflow
+name: react_on_surge
 on:
  push:
   branches:
-  - nodejs_environment_job
+  - react_app_deploy
 jobs:
- linter-execution:
-  name: linter-execution
+ build_job:
+  name: build_job
   runs-on: ubuntu-latest
-  needs: test-execution
   steps:
    - name: Checkout code
      uses: actions/checkout@v2
-   - name: Linter execution
-     uses: github/super-linter@v3
-     env:
-      DEFAULT_BRANCH: nodejs_environment_job
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      LINTER_RULES_PATH: /
-      JAVASCRIPT_ES_CONFIG_FILE: .eslintrc.json
-      VALIDATE_JAVASCRIPT_ES: true
- test-execution:
-  name: test-execution
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Run jest tests
-      run: |
-       npm install jest
-       npm test
+   - name: build
+     run: | 
+      npm install
+      npm run build
+     working-directory: ./project
+   - name: artifact
+     uses: actions/upload-artifact@v2
+     with:
+      name: artifact
+      path: .project/build
 
- environment_test_execution:
-  name: environment_test_execution
-  runs-on: ubuntu-latest
-  needs: [linter-execution, test-execution]
-  env: 
-   DESTINATION_PERSON: "2DAW"
-  steps:
-   - name: hello
-     uses: adeloyedeji/github-actions-hello@v1.0
-     with: 
-      who-to-greet: "${{Env.DESTINATION_PERSON}}"
+  deploy_job:
+    runs-on: ubuntu-latest
+    needs: build_job
+    steps:
+      - name: artifact download
+        uses: actions/download-artifact@v2
+        with: 
+          name: artifact
+      - name: surge_deploy
+        uses: dswistowski/surge-sh-action@v1
+        with:
+          domain: andanivicente.surge.sh
+          project: .
+          login: ${{secrets.SURGE_EMAIL }}
+          token: ${{secrets.SURGE_TOKEN }}
 
