--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,7 +19,7 @@ jobs:
      uses: actions/upload-artifact@v2
      with:
       name: artifact
-      path: .project/build
+      path: ./project/build
  deploy_job:
   runs-on: ubuntu-latest
   needs: build_job
