--- a/.github/actions/get_document/package.json
+++ b/.github/actions/get_document/package.json
@@ -10,6 +10,7 @@
   "author": "vicnx",
   "license": "ISC",
   "dependencies": {
+    "@actions/core": "^1.2.6",
     "download": "^8.0.0",
     "fs-extra": "^9.1.0"
   }
